--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
         <div id='main'>
             <div id='main_container'>
                 <div id="topbar">
+                    <div id='score'>
+                        <div id='score_text'>0</div>
+                    </div>
                     <div id='level'>
                         <div id='level_text'>Level: 0</div>
-                    </div>
-                    <div id='score'>
-                        <div id='score_text'>Score: 0</div>
                     </div>
                 </div>
                 <div id='game' width=800 height=600></div>
