--- a/index.html
+++ b/index.html
@@ -2,19 +2,21 @@
 
 <html>
     <head>
-        <link rel="stylesheet" type="text/css" href="style.css?version=1">
-        <script src="jquery.min.js?version=1"></script>
-        <script src="seedrandom.min.js?version=1"></script>
-        <script src="handlebars.js?version=1"></script>
-        <script src="msg.min.js?version=1"></script>
-        <script src="separator.js?version=1"></script>
-        <script src="base.js?version=1"></script>
-        <script src="utils.js?version=1"></script>
-        <script src="pieces.js?version=1"></script>
-        <script src="grid.js?version=1"></script>
-        <script src="keyboard.js?version=1"></script>
-        <script src="local_storage.js?version=1"></script>
-        <script src="options.js?version=1"></script>
+        <link rel="stylesheet" type="text/css" href="css/style.css?version=1">
+
+        <script src="js/libs/jquery.min.js?version=1"></script>
+        <script src="js/libs/seedrandom.min.js?version=1"></script>
+        <script src="js/libs/handlebars.js?version=1"></script>
+        <script src="js/libs/msg.min.js?version=1"></script>
+        <script src="js/libs/separator.js?version=1"></script>
+
+        <script src="js/main/base.js?version=1"></script>
+        <script src="js/main/utils.js?version=1"></script>
+        <script src="js/main/pieces.js?version=1"></script>
+        <script src="js/main/grid.js?version=1"></script>
+        <script src="js/main/keyboard.js?version=1"></script>
+        <script src="js/main/local_storage.js?version=1"></script>
+        <script src="js/main/options.js?version=1"></script>
 
         <script>
             $(function()
@@ -34,10 +36,10 @@
                     <div id='info'>
                         <div id='level_text'>Level: 0</div>
                         <div id='combo_text'>Combo: 0</div>
-                        <div id='menu' class='action'>Menu</div>
                     </div>
                     <div id='info2'>
-                        <div id='seed_text' class='action'>Seed: None</div>
+                        <div id='seed_text'>Seed: None</div>
+                        <div id='menu' class='action'>Menu</div>
                     </div>
                 </div>
                 <div id='game_container'>
@@ -51,7 +53,7 @@
             </div>
         </div>
         <div id='intro'>
-            <img id='intro_image' src='intro.jpg'>
+            <img id='intro_image' src='img/intro.jpg'>
             <div id='intro_credits'>
                 Tetris © 1985 Tetris Holding.<br>
                 Tetris logos, Tetris theme song and Tetriminos are trademarks of Tetris Holding.<br>
@@ -62,16 +64,16 @@
                 All Rights Reserved.
             </div>
         </div>
-        <audio preload id='music' src='music.mp3?version=1'></audio>
-        <audio preload id='sound_tone_1' src='tone1.mp3?version=1'></audio>
-        <audio preload id='sound_move' src='move.mp3?version=1'></audio>
-        <audio preload id='sound_countdown' src='countdown.mp3?version=1'></audio>
-        <audio preload id='sound_game_started' src='game_started.mp3?version=1'></audio>
-        <audio preload id='sound_placed' src='placed.mp3?version=1'></audio>
-        <audio preload id='sound_intro' src='intro.mp3?version=1'></audio>
-        <audio preload id='sound_rotate' src='rotate.mp3?version=2'></audio>
-        <audio preload id='sound_clear' src='clear.mp3?version=2'></audio>
-        <audio preload id='sound_game_over' src='game_over.mp3?version=2'></audio>
+        <audio preload id='music' src='audio/music.mp3?version=1'></audio>
+        <audio preload id='sound_tone_1' src='audio/tone1.mp3?version=1'></audio>
+        <audio preload id='sound_move' src='audio/move.mp3?version=1'></audio>
+        <audio preload id='sound_countdown' src='audio/countdown.mp3?version=1'></audio>
+        <audio preload id='sound_game_started' src='audio/game_started.mp3?version=1'></audio>
+        <audio preload id='sound_placed' src='audio/placed.mp3?version=1'></audio>
+        <audio preload id='sound_intro' src='audio/intro.mp3?version=1'></audio>
+        <audio preload id='sound_rotate' src='audio/rotate.mp3?version=2'></audio>
+        <audio preload id='sound_clear' src='audio/clear.mp3?version=2'></audio>
+        <audio preload id='sound_game_over' src='audio/game_over.mp3?version=2'></audio>
     </body>
 
     <script id='template_menu' type='text/x-handlebars-template' class='template'>
