More Sound effects

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         <audio preload id='sound_clear' src='audio/clear.mp3?version=2'></audio>
         <audio preload id='sound_game_over' src='audio/game_over.mp3?version=2'></audio>
         <audio preload id='sound_pow' src='audio/pow.mp3?version=2'></audio>
+        <audio preload id='sound_locked' src='audio/locked.mp3?version=2'></audio>
     </body>
 
     <script id='template_menu' type='text/x-handlebars-template' class='template'>
