More stuff. Still some bugs

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
                     <div id='active_piece'></div>
                     <div id='previews'></div>
                 </div>
+                <div id='piece_picker'>
+                    <div id='piece_picker_title'>Choose The Next Four</div>
+                    <div id='piece_picker_wheel'> </div>
+                </div>
             </div>
         </div>
         <div id='intro'>
