--- a/index.html
+++ b/index.html
@@ -48,7 +48,10 @@
                     <div id='countdown'>3</div>
                 </div>
                 <div id='sidebar'>
-                    <div id='active_piece'></div>
+                    <div id='active_piece'>
+                        <div id='active_piece_element'></div>
+                        <div id='queued_left'></div>
+                    </div>
                     <div id='previews'></div>
                 </div>
                 <div id='piece_picker'>
