--- a/index.html
+++ b/index.html
@@ -137,31 +137,37 @@
     <script id='template_help' type='text/x-handlebars-template' class='template'>
         <div id='help_container'>
             <div class='help_item'>
-                Up Arrow or C: Rotate piece clockwise
+                Up Arrow or C: Rotates the piece clockwise.
             </div>
             <div class='help_item'>
-                Control or Z: Rotate piece anti-clockwise
+                Control or Z: Rotates the piece anti-clockwise.
             </div>
             <div class='help_item'>
-                Left Arrow: Move piece to the left
+                Left Arrow: Moves the piece to the left.
             </div>
             <div class='help_item'>
-                Down Arrow: Move piece to the right
+                Down Arrow: Moves the piece to the right.
             </div>
             <div class='help_item'>
-                Down Arrow: Move piece down by 1 step (Soft Drop)
+                Down Arrow: Moves the piece down by 1 step (Soft Drop).
             </div>
             <div class='help_item'>
-                Space: Drop the piece to the bottom instantly (Hard Drop)
+                Space: Drops the piece to the bottom instantly (Hard Drop).
             </div>
             <div class='help_item'>
-                Escape: Pause the game and open the menu
+                Escape: Pauses the game and opens the menu. Closes windows.
             </div>
             <div class='help_item'>
-                Enter: Activates a POW. This separates all Tetromino blocks into their own block, causing them to fall
+                F1: Pauses/unpauses the game.
             </div>
             <div class='help_item'>
-                Clearing a line separates all blocks from the Tetromino into their own block
+                Enter: Activates a POW. This separates all piece blocks into their own block, causing them to fall.
+            </div>
+            <div class='help_item'>
+                Clearing a line separates all blocks from the piece into their own block.
+            </div>
+            <div class='help_item'>
+                Clearing more than 4 lines activates a piece picker to choose the next 4 pieces. This gets triggered on the next piece. Left and right arrows cycle through the pieces. The picker lasts for 3 seconds.
             </div>
         </div>
     </script>
