--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 F1: Pauses/unpauses the game.
             </div>
             <div class='help_item'>
-                Enter: Activates a POW. This separates all piece blocks into their own block, causing them to fall.
+                Enter: Activates POW on the current piece. When the piece is placed, it separates all piece blocks into their own block, causing them to fall.
             </div>
             <div class='help_item'>
                 Clearing a line separates all blocks from the piece into their own block.
