--- a/index.html
+++ b/index.html
@@ -174,10 +174,12 @@
 
     <script id='template_game_over' type='text/x-handlebars-template' class='template'>
         <div id='game_over_container'>
+            <div id='game_over_level' class='game_over_big'></div>
             <div id='game_over_score' class='game_over_big'></div>
             <div id='game_over_time' class='game_over_big'></div>
             <div id='game_over_lines_cleared' class='game_over_big'></div>
             <div id='game_over_max_combo' class='game_over_big'></div>
+            <div id='game_over_pows_used' class='game_over_big'></div>
             <div id='game_over_buttons'>
                 <div id='game_over_play_again' class='game_over_button action'>Play Again</div>
             </div>
