--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
             </div>
             <div class='options_item'>
                 <div class='options_label'>Rows</div>
-                <input type='number' id='option_number_of_rows' class='options_widget options_number' data-options-widget-type='number'>
+                <input type='number' min="10" id='option_number_of_rows' class='options_widget options_number' data-options-widget-type='number'>
             </div>
             <div class='options_item'>
                 <div class='options_label'>Columns</div>
-                <input type='number' id='option_number_of_columns' class='options_widget options_number' data-options-widget-type='number'>
+                <input type='number' min="10" id='option_number_of_columns' class='options_widget options_number' data-options-widget-type='number'>
             </div>
             <div class='options_item'>
                 <div class='options_label'>Previews</div>
-                <input type='number' id='option_number_of_previews' class='options_widget options_number' data-options-widget-type='number'>
+                <input type='number' min="0" id='option_number_of_previews' class='options_widget options_number' data-options-widget-type='number'>
             </div>
             <div class='options_item'>
                 <div class='options_label'>Block Size</div>
-                <input type='number' id='option_block_size' class='options_widget options_number' data-options-widget-type='number'>
+                <input type='number' min="4" id='option_block_size' class='options_widget options_number' data-options-widget-type='number'>
             </div>
             <div class='options_item'>
                 <div class='options_label'>Seed</div>
