--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     </head>
     
     <body>
+        <div id='background'></div>
         <div id='main'>
             <div id='main_container'>
                 <div id="topbar">
