--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
                 <div id='game_container'>
                     <div id='game' width=800 height=600></div>
                     <div id='countdown'>3</div>
+                    <div id='paused'>Paused</div>
                 </div>
                 <div id='sidebar'>
                     <div id='active_piece'>
