--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
                 </div>
                 <div id='game_container'>
                     <div id='game' width=800 height=600></div>
-                    <div id='countdown'>3</div>
-                    <div id='paused'>Paused</div>
+                    <div id='countdown' class='game_box'>3</div>
+                    <div id='paused' class='game_box'>Paused</div>
                 </div>
                 <div id='sidebar'>
                     <div id='active_piece'>
