Background image option

--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
                 <input type='checkbox' id='option_enable_sound_effects' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
             </div>
             <div class='options_item'>
+                <div class='options_label'>Background</div>
+                <input type='checkbox' id='option_enable_background_image' class='options_widget options_checkbox' data-options-widget-type='checkbox'>
+            </div>
+            <div class='options_item'>
                 <div class='options_label'>Rows</div>
                 <input type='number' min="10" id='option_number_of_rows' class='options_widget options_number' data-options-widget-type='number'>
             </div>
