--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                 <input type='text' id='option_seed' class='options_widget options_text' data-options-widget-type='text' placeholder="Empty == Random">
             </div>
             <div class='options_item'>
-                <div id="options_reset_button" class='action'>Reset To Defaults</div>
+                <div id="options_reset_button" class='action'>Reset</div>
             </div>
         </div>
     </script>
@@ -174,6 +174,15 @@
             </div>
             <div class='help_item'>
                 Clearing more than 4 lines activates a piece picker to choose the next 4 pieces. This gets triggered on the next piece. Left and right arrows cycle through the pieces. The picker lasts for 3 seconds.
+            </div>
+            <div class='help_item'>
+                Clearing all the lines spawns a big piece.
+            </div>
+            <div class='help_item'>
+                Levels increase every 4 lines cleared. As levels increase, pieces fall faster, but scoring increases.
+            </div>
+            <div class='help_item'>
+                POWs increase every 20 lines cleared.
             </div>
         </div>
     </script>
