--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 
 <html>
     <head>
+
+        <link rel='shortcut icon' href='img/favicon.png?version=1' type='image/x-icon'>
+
         <link rel="stylesheet" type="text/css" href="css/style.css?version=1">
 
         <script src="js/libs/jquery.min.js?version=1"></script>
