--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 Left Arrow: Moves the piece to the left.
             </div>
             <div class='help_item'>
-                Down Arrow: Moves the piece to the right.
+                Right Arrow: Moves the piece to the right.
             </div>
             <div class='help_item'>
                 Down Arrow: Moves the piece down by 1 step (Soft Drop).
