--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div id='intro'>
             <img id='intro_image' src='img/intro.jpg'>
             <div id='intro_credits'>
-                Tetris © 1985 Tetris Holding.<br>
+                Tetris &copy; 1985 Tetris Holding.<br>
                 Tetris logos, Tetris theme song and Tetriminos are trademarks of Tetris Holding.<br>
                 The Tetris trade dress is owned by Tetris Holding.<br>
                 Licensed to The Tetris Company.<br>
